--- a/public/index.html
+++ b/public/index.html
@@ -1207,7 +1207,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
@@ -1220,7 +1220,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
@@ -1233,7 +1233,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
@@ -1246,7 +1246,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
@@ -1259,7 +1259,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
@@ -1272,7 +1272,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
@@ -1285,7 +1285,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
@@ -1298,7 +1298,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
