--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="theme-color" content="#272727">
   <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/lightgallery/latest/css/lightgallery.css'>
+  <!--[if IE]> <link rel='stylesheet' href='./css/ie.css' type='text/css' /> <![endif]-->
   <link rel='stylesheet' href='./css/main.css' type='text/css' media='all' />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css' type='text/css' media='all' />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.theme.default.min.css' type='text/css' media='all' />
@@ -1183,7 +1184,7 @@
         <p class="red bold">Nowy Sącz</p>
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Sokoł</p>
-          <p class="cinema_shot_date">10-11/02/2017(maraton) 28-29/02/2017(maraton)</p>
+          <p class="cinema_shot_date">28/01/2017(maraton) 10/02/2017(maraton)</p>
           <a href="http://www.kino-sokol.pl" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/nav_kino_sokol.png" alt="Kino Sokol" role="presentation" />
           </a>
