ie fix + lament i zombie

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta property="og:locale" content="pl_PL">
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-COMPATIBLE" content="IE-EmulateIE9">
   <title>FestMakabra</title>
   <!-- Social Meta -->
   <meta name="author" content="Dzianis Makeichyk" />
@@ -14,8 +15,8 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="theme-color" content="#272727">
   <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/lightgallery/latest/css/lightgallery.css'>
-  <!--[if IE]> <link rel='stylesheet' href='./css/ie.css' type='text/css' /> <![endif]-->
   <link rel='stylesheet' href='./css/main.css' type='text/css' media='all' />
+  <link rel='stylesheet' href='./css/ie.css' type='text/css' />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css' type='text/css' media='all' />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.theme.default.min.css' type='text/css' media='all' />
 </head>
