reloader sokol -fix alfabet

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.carousel.min.css' type='text/css' media='all' />
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.3/assets/owl.theme.default.min.css' type='text/css' media='all' />
 </head>
+<div id="preloader"><div><em></em><em></em><em></em><em></em></div></div>
 <body>
 <header>
   <div class="header_container">
@@ -1163,46 +1164,6 @@
       <div class="movies_block blood_block top">
         <p class="bold">Kina</p>
       </div>
-      <div class="cinema_city">
-        <p class="red bold">Kraków</p>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Kino Mikro</p>
-          <p class="cinema_shot_date">13-19/02/2017</p>
-          <a href="http://www.kinomikro.pl/" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Mikro" role="presentation" />
-            </a>
-        </div>
-        <div class="separator"></div>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Kino Mikro - Galeria Bronowice</p>
-          <p class="cinema_shot_date">13-19/02/2017</p>
-          <a href="http://www.kinomikro.pl/" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Mikro" role="presentation" />
-          </a>
-        </div>
-      </div>
-      <div class="cinema_city">
-        <p class="red bold">Nowy Sącz</p>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Kino Sokoł</p>
-          <p class="cinema_shot_date">28/01/2017(maraton) 10/02/2017(maraton)</p>
-          <a href="http://www.kino-sokol.pl" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/nav_kino_sokol.png" alt="Kino Sokol" role="presentation" />
-          </a>
-        </div>
-        <div class="separator"></div>
-      </div>
-      <div class="cinema_city">
-        <p class="red bold">Wadowice</p>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Wadowickie Centrum Kultury</p>
-          <p class="cinema_shot_date">02-10/02/2017</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/logo-WCK-site.png" alt="Wadowickie Centrum Kultury" role="presentation" />
-          </a>
-        </div>
-        <div class="separator"></div>
-      </div>
       <!-- Biała Podlaska -->
       <div class="cinema_city">
         <p class="red bold">Biała Podlaska</p>
@@ -1216,6 +1177,19 @@
         <div class="separator"></div>
       </div>
       <!-- End Biała Podlaska -->
+      <!-- Gdańsk -->
+      <div class="cinema_city">
+        <p class="red bold">Gdańsk</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://cinema3d.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Gdańsk -->
       <!-- Głogów -->
       <div class="cinema_city">
         <p class="red bold">Głogów</p>
@@ -1242,58 +1216,6 @@
         <div class="separator"></div>
       </div>
       <!-- End Kalisz -->
-      <!-- Świdnica -->
-      <div class="cinema_city">
-        <p class="red bold">Świdnica</p>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Cinema 3D</p>
-          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://cinema3d.pl/" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
-          </a>
-        </div>
-        <div class="separator"></div>
-      </div>
-      <!-- End Świdnica -->
-      <!-- Świnoujście -->
-      <div class="cinema_city">
-        <p class="red bold">Świnoujście</p>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Cinema 3D</p>
-          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://cinema3d.pl/" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
-          </a>
-        </div>
-        <div class="separator"></div>
-      </div>
-      <!-- End Świnoujście -->
-      <!-- Gdańsk -->
-      <div class="cinema_city">
-        <p class="red bold">Gdańsk</p>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Cinema 3D</p>
-          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://cinema3d.pl/" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
-          </a>
-        </div>
-        <div class="separator"></div>
-      </div>
-      <!-- End Gdańsk -->
-      <!-- Tarnów -->
-      <div class="cinema_city">
-        <p class="red bold">Tarnów</p>
-        <div class="cinema_shot">
-          <p class="cinema_shot_name">Cinema 3D</p>
-          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://cinema3d.pl/" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
-          </a>
-        </div>
-        <div class="separator"></div>
-      </div>
-      <!-- End Tarnów -->
       <!-- Kłodzko -->
       <div class="cinema_city">
         <p class="red bold">Kłodzko</p>
@@ -1307,19 +1229,112 @@
         <div class="separator"></div>
       </div>
       <!-- End Kłodzko -->
+      <!-- Krakow -->
+      <div class="cinema_city">
+        <p class="red bold">Kraków</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Mikro</p>
+          <p class="cinema_shot_date">13-19/02/2017</p>
+          <a href="http://www.kinomikro.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Mikro" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Mikro - Galeria Bronowice</p>
+          <p class="cinema_shot_date">13-19/02/2017</p>
+          <a href="http://www.kinomikro.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Mikro" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Kika</p>
+          <p class="cinema_shot_date">23-25/02/2017</p>
+          <a href="http://www.kinomikro.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Kika" role="presentation" />
+          </a>
+        </div>
+      </div>
+      <!-- End Krakow -->
       <!-- Leszno -->
       <div class="cinema_city">
         <p class="red bold">Leszno</p>
         <div class="cinema_shot">
           <p class="cinema_shot_name">Cinema 3D</p>
           <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
-          <a href="http://wck.wadowice.pl" target="_blank" >
+          <a href="http://cinema3d.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
           </a>
         </div>
         <div class="separator"></div>
       </div>
       <!-- End Leszno -->
+      <!-- Nowy Sacz -->
+      <div class="cinema_city">
+        <p class="red bold">Nowy Sącz</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Sokoł</p>
+          <p class="cinema_shot_date">28/01/2017(maraton)&nbsp;&nbsp;10/02/2017(maraton)</p>
+          <a href="http://www.kino-sokol.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/nav_kino_sokol.png" alt="Kino Sokol" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Nowy Sacz -->
+      <!-- Świanoujście -->
+      <div class="cinema_city">
+        <p class="red bold">Świnoujście</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://cinema3d.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Świanoujście -->
+      <!-- Świdnica -->
+      <div class="cinema_city">
+        <p class="red bold">Świdnica</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://cinema3d.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Świdnica -->
+      <!-- Tarnów -->
+      <div class="cinema_city">
+        <p class="red bold">Tarnów</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://cinema3d.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Tarnów -->
+      <!-- Wiadowice -->
+      <div class="cinema_city">
+        <p class="red bold">Wadowice</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Wadowickie Centrum Kultury</p>
+          <p class="cinema_shot_date">02-10/02/2017</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/logo-WCK-site.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Wiadowice -->
     </div>
   </section>
   <!-- END Cinemas -->
