--- a/public/index.html
+++ b/public/index.html
@@ -1251,8 +1251,8 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Kika</p>
           <p class="cinema_shot_date">23-25/02/2017</p>
-          <a href="http://www.kinomikro.pl/" target="_blank" >
-            <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Kika" role="presentation" />
+          <a href="http://www.kinokika.pl/" target="_blank" >
+            <img class="cinema_shot_img kika" src="./img/cinemas/kika_logo.png" alt="Kino Kika" role="presentation" />
           </a>
         </div>
       </div>
