--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
       <div class="about_box">
         <div class="about_image_box">
           <img src="./img/fest_plakat.png" class="about_fest" alt="#" role="presentation" />
-          <a href="#" class="pop_up_view">pobierz presspack</a>
+          <a href="./file/FEST_MAKABRA_2017_pakiet_prasowy.rar" class="pop_up_view">pobierz presspack</a>
         </div>
         <div class="about_fest_text">
           <p>
