--- a/public/index.html
+++ b/public/index.html
@@ -1177,6 +1177,19 @@
         <div class="separator"></div>
       </div>
       <!-- End Biała Podlaska -->
+      <!-- Chodziez -->
+      <div class="cinema_city">
+        <p class="red bold">Chodzież</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">kino Noteć</p>
+          <p class="cinema_shot_date">10-16/02/2017</p>
+          <a href="#" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/kino-notec.jpg" alt="notec" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Chodziez -->
       <!-- Gdańsk -->
       <div class="cinema_city">
         <p class="red bold">Gdańsk</p>
@@ -1250,7 +1263,7 @@
         <div class="separator"></div>
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Kika</p>
-          <p class="cinema_shot_date">23-25/02/2017</p>
+          <p class="cinema_shot_date">3-25/02/2017</p>
           <a href="http://www.kinokika.pl/" target="_blank" >
             <img class="cinema_shot_img kika" src="./img/cinemas/kika_logo.png" alt="Kino Kika" role="presentation" />
           </a>
