--- a/public/index.html
+++ b/public/index.html
@@ -1296,6 +1296,26 @@
         <div class="separator"></div>
       </div>
       <!-- End Nowy Sacz -->
+      <!-- Poznań -->
+      <div class="cinema_city">
+        <p class="red bold">Poznań</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Malta</p>
+          <p class="cinema_shot_date">17-22/03/2017</p>
+          <a href="#" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/malta.png" alt="Kino Malta" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Rialto</p>
+          <p class="cinema_shot_date">10-15/03/2017</p>
+          <a href="#" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/rialto.png" alt="Kino Rialto" role="presentation" />
+          </a>
+        </div>
+      </div>
+      <!-- End Poznań -->
       <!-- Świanoujście -->
       <div class="cinema_city">
         <p class="red bold">Świnoujście</p>
