--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-COMPATIBLE" content="IE-EmulateIE9">
-  <title>FestMakabra</title>
+  <title>Fest Makabra – oficjalna strona</title>
   <!-- Social Meta -->
   <meta name="author" content="Dzianis Makeichyk" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -1183,7 +1183,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">kino Noteć</p>
           <p class="cinema_shot_date">10-16/02/2017</p>
-          <a href="#" target="_blank" >
+          <a href="http://www.kinochodziez.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/kino-notec.jpg" alt="notec" role="presentation" />
           </a>
         </div>
@@ -1302,7 +1302,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Malta</p>
           <p class="cinema_shot_date">17-22/03/2017</p>
-          <a href="#" target="_blank" >
+          <a href="http://www.kinomalta.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/malta.png" alt="Kino Malta" role="presentation" />
           </a>
         </div>
@@ -1310,7 +1310,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Rialto</p>
           <p class="cinema_shot_date">10-15/03/2017</p>
-          <a href="#" target="_blank" >
+          <a href="http://www.kinorialto.poznan.pl/" target="_blank" >
             <img class="cinema_shot_img" src="./img/cinemas/rialto.png" alt="Kino Rialto" role="presentation" />
           </a>
         </div>
