add luna add praha

--- a/public/index.html
+++ b/public/index.html
@@ -1355,6 +1355,26 @@
         <div class="separator"></div>
       </div>
       <!-- End Tarnów -->
+      <!-- Warszawa -->
+      <div class="cinema_city">
+        <p class="red bold">Warszawa</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Luna</p>
+          <p class="cinema_shot_date">06/02/2017(Lament)</p>
+          <a href="http://www.kinoluna.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/luna.png" alt="Kino Luna" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Praha</p>
+          <p class="cinema_shot_date">24/02/2017(maraton)</p>
+          <a href="http://www.kinopraha.pl/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/praha.jpg" alt="Kino Praha" role="presentation" />
+          </a>
+        </div>
+      </div>
+      <!-- End Warszawa -->
       <!-- Wiadowice -->
       <div class="cinema_city">
         <p class="red bold">Wadowice</p>
