--- a/public/index.html
+++ b/public/index.html
@@ -65,37 +65,37 @@
   <div id="sync1" class="owl-carousel owl-theme">
     <div class="item am_burger">
       <div class="cinema-box-word">
-        <p class="container-text bold writing" data-text="Amerykański burger">Amerykański burger</p>
+        <h1 class="container-text bold writing" data-text="Amerykański burger">Amerykański burger</h1>
       </div>
     </div>
     <div class="item bodom">
       <div class="cinema-box-word">
-        <p class="container-text bold writing" data-text="bodom">Bodom</p>
+        <h1 class="container-text bold writing" data-text="bodom">Bodom</h1>
       </div>
     </div>
     <div class="item express">
       <div class="cinema-box-word">
-        <p class="container-text bold writing" data-text="Zombie express">Zombie express</p>
+        <h1 class="container-text bold writing" data-text="Zombie express">Zombie express</h1>
       </div>
     </div>
     <div class="item klatwa">
       <div class="cinema-box-word">
-        <p class="container-text bold writing" data-text="Klątwa Śpiącej Królewny">Klątwa Śpiącej Królewny</p>
+        <h1 class="container-text bold writing" data-text="Klątwa Śpiącej Królewny">Klątwa Śpiącej Królewny</h1>
       </div>
     </div>
     <div class="item atak">
       <div class="cinema-box-word">
-        <p class="container-text bold writing" data-text="Atak krwiożerczych donatów">Atak krwiożerczych donatów</p>
+        <h1 class="container-text bold writing" data-text="Atak krwiożerczych donatów">Atak krwiożerczych donatów</h1>
       </div>
     </div>
     <div class="item side">
       <div class="cinema-box-word">
-        <p class="container-text bold writing" data-text="Pod mroczną górą">Pod mroczną górą</p>
+        <h1 class="container-text bold writing" data-text="Pod mroczną górą">Pod mroczną górą</h1>
       </div>
     </div>
     <div class="item lament">
       <div class="cinema-box-word">
-        <p class="container-text bold writing" data-text="Lament">Lament</p>
+        <h1 class="container-text bold writing" data-text="Lament">Lament</h1>
       </div>
     </div>
   </div>
@@ -150,7 +150,7 @@
         </div>
         <div class="about_fest_text">
           <p>
-            <span class="red bold">FEST MAKABRA</span>
+            <h1 class="red bold">FEST MAKABRA</h1>
             to nowy, ogólnopolski przegląd filmowy, prezentujący zagraniczne filmy z pogranicza horroru, thrillera, mrocznego fantasy i czarnej komedii. Większość filmów z programu zostanie wyświetlona w Polsce premierowo i będzie to jedyna okazja do obejrzenia ich na wielkim ekranie. Pierwsza edycja przeglądu filmowego FEST MAKABRA odbędzie się w kinach studyjnych i niezależnych w całej Polsce w lutym i marcu 2017 roku.
             Organizatorem wydarzenia jest dystrybutor filmów Kino Świat.
           </p>
@@ -1265,7 +1265,7 @@
           <p class="cinema_shot_name">Kino Kika</p>
           <p class="cinema_shot_date">3-25/02/2017</p>
           <a href="http://www.kinokika.pl/" target="_blank" >
-            <img class="cinema_shot_img kika" src="./img/cinemas/kika_logo.png" alt="Kino Kika" role="presentation" />
+            <img class="cinema_shot_img kika" src="./img/cinemas/kika.png" alt="Kino Kika" role="presentation" />
           </a>
         </div>
       </div>
