--- a/public/index.html
+++ b/public/index.html
@@ -1265,11 +1265,24 @@
           <p class="cinema_shot_name">Kino Kika</p>
           <p class="cinema_shot_date">3-25/02/2017</p>
           <a href="http://www.kinokika.pl/" target="_blank" >
-            <img class="cinema_shot_img kika" src="./img/cinemas/kika.png" alt="Kino Kika" role="presentation" />
+            <img class="cinema_shot_img small" src="./img/cinemas/kika.png" alt="Kino Kika" role="presentation" />
           </a>
         </div>
       </div>
       <!-- End Krakow -->
+      <!-- Łódź -->
+      <div class="cinema_city">
+        <p class="red bold">Łódź</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">kino Charlie</p>
+          <p class="cinema_shot_date">24/02-2/03/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://www.charlie.pl/" target="_blank" >
+            <img class="cinema_shot_img small" src="./img/cinemas/charlie.png" alt="kino Charlie" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Łódź -->
       <!-- Leszno -->
       <div class="cinema_city">
         <p class="red bold">Leszno</p>
