--- a/public/index.html
+++ b/public/index.html
@@ -1177,6 +1177,19 @@
         <div class="separator"></div>
       </div>
       <!-- End Biała Podlaska -->
+      <!-- Białystok -->
+      <div class="cinema_city">
+        <p class="red bold">Białystok</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Forum (BOK)</p>
+          <p class="cinema_shot_date">20-23/03/2017</p>
+          <a href="http://bok.bialystok.pl/wydarzenia/kategoria/kino-forum/" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/bok.png" alt="Kino Forum (BOK)" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Białystok -->
       <!-- Chodziez -->
       <div class="cinema_city">
         <p class="red bold">Chodzież</p>
