Bolesławiec – Kino Forum -  23/02/2017 (maraton)
Zabrze – Kino Roma – 3-9/03/2017

--- a/public/index.html
+++ b/public/index.html
@@ -1190,6 +1190,19 @@
         <div class="separator"></div>
       </div>
       <!-- End Białystok -->
+      <!-- Bolesławiec -->
+      <div class="cinema_city">
+        <p class="red bold">Bolesławiec</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Forum</p>
+          <p class="cinema_shot_date">23/02/2017 (maraton)</p>
+          <a href="http://www.kino.boleslawiec.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/logo_forum.png" alt="Kino Forum" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Bolesławiec -->
       <!-- Chodziez -->
       <div class="cinema_city">
         <p class="red bold">Chodzież</p>
@@ -1414,6 +1427,19 @@
         <div class="separator"></div>
       </div>
       <!-- End Wiadowice -->
+      <!-- Zabrze -->
+      <div class="cinema_city">
+        <p class="red bold">Zabrze</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Kino Roma</p>
+          <p class="cinema_shot_date">03-09/03/2017</p>
+          <a href="http://www.kinoroma.zabrze.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/kino_roma.png" alt="Kino Roma" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Zabrze -->
     </div>
   </section>
   <!-- END Cinemas -->
